[package]
name = "vendor-space"
version = "0.1.0"
edition = "2021"
authors = ["Drew Nutter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.5"
